--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block content %}
-
+<!--
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -15,65 +15,45 @@
        <li data-target="#carousel-example-generic" data-slide-to="2" ></li>
         <li data-target="#carousel-example-generic" data-slide-to="3" ></li>
     </ol>
+//-->
     <!-- Wrapper for slides -->
-    <div class="carousel-inner">
-        <div class="item active">
-            <div class="jumbotron" style="background: url('static/img/slide1.jpg');background-size: 100% 100%;background-repeat: no-repeat;">
-            <div class="container">
-            <h1><i class="fa fa-desktop"></i> Flask App Builder</h1>
-            <p>{{_("Simple and rapid application development framework, built on top of Flask. includes detailed security, auto CRUD generation for your models, google charts and much more.")}}</p>
-            <center>
-            <p><a class="btn btn-primary btn-lg" href="https://github.com/dpgaspar/Flask-AppBuilder"
-                 role="button">{{_("Star it")}} <i class="fa fa-star"></i></a></p>
-            </center>
-            </div>
-           </div>
-        </div>
+    <div class="jumbotron">
+        <div class="site-banners">
 
-        <div class="item">
-            <div class="jumbotron" style="background: url('static/img/slide2.jpg');background-size: 100% 100%;background-repeat: no-repeat;">
-            <div class="container">
-            <h1><i class="fa fa-github"></i> {{_("Free and Open Source")}}</h1>
-                <p>{{_("Use it any way you like, it's free to use. Feel free to contribute, post questions, propose new features, report bugs. You can browse the code freely on github.")}}</p>
-            <center>
-                <p><a class="btn btn-primary btn-lg" href="https://github.com/dpgaspar/Flask-AppBuilder/issues" role="button">{{_("Issues")}} &raquo;</a></p>
-            </center>
-            </div>
-            </div>
+                <div class="alert alert-dismissable alert-dismissable-persistent">
+                    <div class="alert-heading">
+                        Want to learn more about .NET 5?
+                    </div>
+                    <div>
+                        Check out the .NET 5 Preview 3 announcement blog post.
+                    </div>
+                    <div class="alert-action">
+                        <a href="https://devblogs.microsoft.com/dotnet/announcing-net-5-0-preview-3/?utm_source=dotnet-website&amp;utm_medium=banner&amp;utm_campaign=blog-banner" target="_blank" aria-label="See the blog post">See the blog post</a>
+                    </div>
+                <button type="button" class="close alertclose" aria-label="close" data-dismiss="alert" data-identifier="dotnet5-announcement">×</button></div>
         </div>
+        <div class="container x-hidden-focus" id="mainContent">
+            
+    <h1>.NET</h1>
+    <p class="lead x-hidden-focus">Free. Cross-platform. Open source.<br>A developer platform for building <span class="tagline typing x-hidden-focus">all your</span> apps.</p>
+    <p>
+        <a class="btn btn-white btn-lg btn-scale" href="/learn/dotnet/hello-world-tutorial/intro" role="button">Get Started</a>
+        <a class="btn btn-purple btn-lg btn-scale btn-normal-weight" href="/download" role="button">Download</a>
+    </p>
+    <p>Supported on Windows, Linux, and macOS</p>
 
-        <div class="item">
-            <div class="jumbotron" style="background: url('static/img/slide3.jpg');background-size: 100% 100%;background-repeat: no-repeat;">
-            <div class="container">
-            <h1><i class="fa fa-book"></i> {{_("Documentation")}}</h1>
-            <p>{{_("Every feature is documented with examples. API documentation is automatically generated from commented code.")}}</p>
-            <center>
-            <p><a class="btn btn-primary btn-lg" href="http://flask-appbuilder.readthedocs.org/en/latest/" role="button">{{_("Documentation")}} &raquo;</a></p>
-            </center>
-            </div>
-            </div>
         </div>
-
-        <div class="item">
-            <div class="jumbotron" style="background: url('static/img/slide4.jpg');background-size: 100% 100%;background-repeat: no-repeat;">
-            <div class="container">
-            <h1><i class="fa fa-play"></i> {{_("Live Demo")}}</h1>
-            <p>{{_("Login and get a hold on the quick how to example, with a simple contacts app. This will show the basic features of the framework. Feel free to login using user 'guest' password 'welcome'")}}</p>
-            <center>
-            <p><a class="btn btn-primary btn-lg"  href="login" role="button">{{_("Login")}} &raquo;</a></p>
-            </center>
-            </div>
-            </div>
-        </div>
-</div>
+    </div>
 
     <!-- Controls -->
+<!--
   <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left"></span>
   </a>
   <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
     <span class="glyphicon glyphicon-chevron-right"></span>
   </a>
+//-->
 
 </div>
 
